fix: CBG-184: adjusting zoom out button to avoid scrollbars

--- a/src/components/Facets/ColorWall/ColorWall.scss
+++ b/src/components/Facets/ColorWall/ColorWall.scss
@@ -61,7 +61,7 @@
   right: 0;
   color: var(getThemeColor('buttonColor'));
   background: var(getThemeColor('buttonBgColor'));
-  margin: .25em;
+  margin: 10px 20px; // to clear scrollbars
   border-radius: 50%;
   width: 2.5em;
   height: 2.5em;
